# seoul-transaction-permit

./: .gitignore  README.md  build_apartment_app.bat  build_apartment_app.sh  build_app.bat  build_app.sh  build_web_app.bat  build_web_app.sh  main.py  pyproject.toml  배포가이드.md  서울_공동주택.py  서울_공동주택_Web-GUI.py  토지거래허가구역+도로명주소+좌표_서울.py  토지거래허가구역+도로명주소+좌표_서울_playwright.py  토지거래허가구역_Playwright_Web-GUI.py  토지거래허가구역_Selenium_tkinter-GUI.py  토지거래허가구역_서울.py
archive/: 토지거래허가구역+도로명주소_서울_selenium.py
build-scripts/: build_web_app.sh
scripts/cli/: 토지거래허가구역_playwright.py  토지거래허가구역_selenium.py
scripts/gui/desktop/: 토지거래허가구역_데스크톱GUI.py
scripts/gui/web/: 토지거래허가구역_웹GUI.py
scripts/gui/web/templates/: apartment_index.html  index.html
templates/: index.html
